<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_bg"
    android:gravity="center">
    <EditText
        android:id="@+id/search_by_name"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/button_home_screee"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:hint="@string/search_with_name"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:paddingLeft="20sp"/>
    <EditText
        android:id="@+id/search_by_category"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/button_home_screee"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:hint="@string/search_with_cat"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:paddingLeft="20sp"/>
    <EditText
        android:id="@+id/search_by_description"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/button_home_screee"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:hint="@string/search_with_description"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:paddingLeft="20sp"/>
    <EditText
        android:id="@+id/search_by_keyword"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/button_home_screee"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:hint="@string/search_with_keyword"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:paddingLeft="20sp"/>

    <Button
        android:id="@+id/search_product"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/grey_bg_tv"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        android:hint="@string/search_button"
        android:textColorHint="@color/button"
        android:textSize="14sp"
        android:paddingLeft="20sp"/>


</LinearLayout>