<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@mipmap/header"
        >

        <ImageView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_white"
            android:layout_centerInParent="true"

            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="Back"
            android:layout_marginRight="10sp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/button_home_screee"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20sp"
        android:gravity="center"

        android:text="@string/suggest_a_change"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_marginLeft="20sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:hint="@string/type_your_msg"
        android:inputType="textMultiLine"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:gravity="top"/>
    <TextView
        android:id="@+id/post_requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_review"
        android:textColor="@color/white"
        android:background="@color/button"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_margin="20sp"

        />




</LinearLayout>
