<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@mipmap/header"
        >

        <ImageView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_white"
            android:layout_centerInParent="true"

            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="Back"
            android:layout_marginRight="10sp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/button_home_screee"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Product"
            android:tint="@color/white"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="10sp"
            android:textSize="10sp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/post_text" />



    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_white_round"

        >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="2.2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="2.1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1.8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_name"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1.8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1.8"
                />





        </LinearLayout>
        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_below="@+id/ll1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>